[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34"
vulkano-win = "0.34"
vulkano-shaders = "0.34"
vulkano-util = "0.34"
image = "0.25.1"
winit = "0.28.0"
nalgebra = { version = "0.32.5", features = ["bytemuck"] }
bytemuck = "1.15.0"
opensimplex_noise_rs = "0.3.0"
png = "0.17.13"

[profile.dev.build-override]
opt-level = 3
